--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,15 @@
     android:gravity="center"
     android:orientation="vertical">
 
+    <LinearLayout
+
+        android:id="@+id/user_info_root"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+    </LinearLayout>
+
     <TextView
 
         android:layout_width="wrap_content"
@@ -12,13 +21,14 @@
         android:layout_gravity="center"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="100dp"
-        android:text="Your Image"
+        android:text="@string/your_image"
         android:textColor="@color/colorPrimary"
         android:textSize="20sp" />
 
     <ImageView
 
         android:id="@+id/uploded_photo_image"
+
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:layout_marginBottom="10dp"
